Update scenarios to use new config